--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,35 @@
-/* * { */
-/*     border: 1px solid black; */
-/* } */
+:root {
+    --background: #6b2020;
+    --text: #EAE4E4;
+    --start_button_background: #75AC5A;
+    --start_button_color: #EAE4E4;
+    --pause_button_background: #75AC5A;
+    --pause_button_color: #EAE4E4;
+    --contiue_button_background: #B75E63;
+    --continue_button_color: #EAE4E4;
+    --stop_button_background: #B75E63;
+    --stop_button_color: #EAE4E4;
+}
+
+@font-face {
+    font-family: 'inter';
+    src: url('./assets/fonts/Inter-Regular.ttf')
+}
+
+* {
+    font-family: 'inter', Arial, sans-serif;
+}
 
 .center {
     display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .timer {
     font-size: 72px;
+    color: #EAE4E4;
 }
 
 button {
@@ -19,4 +39,31 @@ button {
     font-size: 20px;
 }
 
+.background {
+    width: 300px;
+    height: 250px;
+    background-color: var(--background);
+}
 
+.start {
+    color: var(--start_button_color);
+    background-color: var(--start_button_background);
+}
+
+.pause {
+    color: var(--pause_button_color);
+    background-color: var(--pause_button_background);
+    display: none;
+}
+
+.continue {
+    color: var(--continue_button_color);
+    background-color: var(--continue_button_background);
+    display: none;
+}
+
+.stop {
+    color: var(--stop_button_color);
+    background-color: var(--stop_button_background);
+    display: none;
+}
