--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,9 @@ button {
 }
 
 .background {
-    width: 300px;
-    height: 250px;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
     background-color: var(--background);
 }
 
