removing os title bar, and making window draggable

--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,11 @@ button {
     background-color: var(--stop_button_background);
     display: none;
 }
+
+.drag {
+    -webkit-app-region: drag; 
+}
+
+.no-drag {
+    -webkit-app-region: no-drag; 
+}
