--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,8 @@ body {
 }
 
 .title-bar > div {
-    padding: 10px;
+    padding-right: 10px;
+    padding-left: 10px;
     margin: 0px;
     width: 100vw;
 }
@@ -47,22 +48,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-}
-
-.svg-icon {
-    width: 20px;
-    height: 20px;
-    color: var(--text);
-}
-
-#close-icon:hover {
-    color: red;
-}
-
-#min-icon:hover {
-    color: yellow;
-}
-
+    padding: 10px;
 }
 
 .center {
@@ -87,6 +73,7 @@ button {
 .use-full-height {
     height: 100vh;
 }
+
 .background {
     margin: 0px;
     padding: 0px;
@@ -122,4 +109,9 @@ button {
 
 .no-drag {
     -webkit-app-region: no-drag; 
+}
+
+object {
+    width: 18px;
+    margin: 5px;
 }
