correcting colors on :root

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
     --text: #EAE4E4;
     --start_button_background: #75AC5A;
     --start_button_color: #EAE4E4;
-    --pause_button_background: #75AC5A;
+    --pause_button_background: #6E96D2;
     --pause_button_color: #EAE4E4;
-    --contiue_button_background: #B75E63;
+    --continue_button_background: #6E96D2;
     --continue_button_color: #EAE4E4;
     --stop_button_background: #B75E63;
     --stop_button_color: #EAE4E4;
