--- a/src/index.css
+++ b/src/index.css
@@ -54,9 +54,9 @@ body {
 #buttons {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-direction: row;
-    padding: 10px;
+    width: 100vw;
 }
 
 .center {
@@ -77,6 +77,8 @@ button {
     border-radius: 5px;
     font-size: 20px;
     border: 1px solid rgba(255, 0, 0, 0);
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 button:hover {
